# JE

./: .gitignore  CMakeLists.txt  LD48_TODO.txt  Makefile  README.md  TODO.md  TODO.txt  client.c  client.h  editor.map  game.lua  j25_vs.sublime-project  map_editor.world  out.txt  stdafx.h
apps/example_minimal/: main.lua
apps/example_platformer/: game.lua  main.lua  material.lua  physics.lua
apps/example_platformer/entities/: player.lua  wall.lua
apps/game/: README.md  game.lua  main.lua  material.lua  physics.lua
apps/game/entities/: player.lua  wall.lua
apps/ld48/: main.lua
apps/ld48/data/: cave1.world  cave2.world  cave3.world  cave4.world  cave7.world  editor.map  end.world  hell1.world  song1.mid  temple1.world  temple2.world  temple3.world  temple4.world  test.world
apps/ld48/entities/: death.lua  decoration.lua  player.lua  rock.lua  wall.lua
apps/ld48/systems/: main_menu.lua  material.lua  physics.lua
apps/minimal/: README.md  main.lua
client/: CMakeLists.txt  README.md  client.c  client.h  container.c  container.h  debug.c  debug.h  image.c  image.h  lua_client.c  lua_client.h  main.c  private_dependencies.h  rendering.c  rendering.h  stdafx.h  window.c  window.h
client/drivers/: drivers.c  lua_client.c  rendering.c  stdafx.h  window.c
client/include/: client.h  common.h  container.h  image.h  j25.h  lua_client.h  rendering.h  window.h
client/lib/: CMakeLists.txt
client/src/: CMakeLists.txt
client/src/j25/: CMakeLists.txt  core.h  stdafx.h
client/src/j25/client/: CMakeLists.txt  client.c  client.h  main.c
client/src/j25/core/: CMakeLists.txt  api.h  common.c  common.h  container.c  container.h  debug.c  debug.h
client/src/j25/platform/: CMakeLists.txt  audio.c  audio.h  image.c  image.h  image_headless.c  rendering.c  rendering.h  window.c  window.h  window_headless.c
engine/: README.md  camera.lua  client.lua  editor.lua  entity.lua  input.lua  shape.lua  simulation.lua  sprite.lua  template.lua  text.lua  util.lua  world.lua
engine/client/: client.lua
engine/docs/api/: simulation.md
engine/docs/src/abstractions/: serializable.md
engine/docs/src/api/: simulation.md
engine/lib/debugger/: debugger.lua
engine/systems/: audio.lua  background.lua  camera.lua  editor.lua  entity.lua  input.lua  shape.lua  simulation.lua  sprite.lua  template.lua  text.lua
engine/util/: log.lua  util.lua
games/game/: README.md  game.lua  main.lua  material.lua  physics.lua
games/game/entities/: player.lua  wall.lua
games/j25/: game.lua  main.lua  physics.lua
games/j25/entities/: player.lua
games/minimal/: README.md  main.lua
scripts/: build_doc_html.sh  build_docs.py  build_docs_html.sh  print_markdown_contents.sh  requirements.txt
src/client/: client.c  client.h  container.c  container.h  core.c  core.h  debug.c  debug.h  image.c  image.h  logging.h  lua.h  lua_client.c  lua_client.h  lua_wrapper.c  lua_wrapper.h  main.c  precompiled.h  renderable.c  renderable.h  rendering.c  rendering.h  stdafx.h  window.c  window.h
src/engine/: camera.lua  client.lua  engine.lua  entity.lua  input.lua  screen.lua  shape.lua  simulation.lua  sprite.lua  system.lua  template.lua  text.lua  util.lua  world.lua
src/game/: game.lua  main.lua  material.lua  physics.lua
src/game/entities/: player.lua  wall.lua
